docker maven fix